# Nuova-giovi-AI

./: .cursorrules  .gitignore  DESCRIZIONE_SERVIZIO_GIOVI_AI.md  DOCUMENTAZIONE_COMPLETA_GIOVI_AI.md  FIRESTORE_STRUCTURE.md  RIEPILOGO_STATO_E_PROSSIMI_PASSI.md  firestore_structure.json  mail test
Nuova-giovi-AI.git/: config  packed-refs
giovi-ai/agency-service/: .gitignore  MODULO_PULIZIE_GUIDA_COMPLETA.md  README.md  main.py  pyproject.toml
giovi-ai/agency-service/src/agency_service/: config.py  firestore.py  models.py
giovi-ai/agency-service/src/agency_service/routes/: __init__.py  dependencies.py  jobs.py  plans.py  routes_board.py  skills.py  staff.py  stats.py
giovi-ai/agency-service/src/agency_service/services/: planning.py
giovi-ai/agency-service/tests/: test_health.py
giovi-ai/email-agent-service/: .dockerignore  .gitignore  CHECKLIST_TEST_COMPLETI.md  DEPLOY_INSTRUCTIONS.md  DISTINZIONE_CONFERMA_VS_MESSAGGIO_AIRBNB.md  Dockerfile  FLUSSO_COMPLETO.md  IMPORT_MAIL_E_SALVATAGGIO_FIRESTORE.md  PARSER_EMAIL_CONFERMA_AIRBNB.md  README.md  SETUP_COMPLETED.md  STATO_PROGETTO.md  TEST_GMAIL_WATCH.md  TEST_MANUALI_VS_AUTOMATICI.md  VERIFICA_FILTRI_SICUREZZA.md  VERIFICA_FIRESTORE_WATCH.md  cleanup_orphaned_data.py  deploy.sh  main.py  matching_verification_results.json  pyproject.toml  verify_matching_results.py
giovi-ai/email-agent-service/src/email_agent_service/: app.py
giovi-ai/email-agent-service/tests/: quick_test_booking.py  test_booking_integration_quick.py
giovi-ai/email-agent-service/tests/fixtures/: __init__.py  booking_api_responses.py
giovi-ai/email-agent-service/tests/unit/: test_airbnb_parsers.py  test_backfill_service.py  test_booking_message_processor.py  test_booking_messaging_client.py  test_booking_models.py  test_booking_parsers.py  test_booking_reply_service.py  test_booking_reservation_client.py  test_booking_reservation_parser.py  test_health.py  test_integrations_routes.py  test_oauth_service.py  test_persistence_booking_reservation.py
(+227 files in other folders)
